0. Сортировка [#10096 #452652]исправление1